  * pg_upgradecluster: Don't accidentally set (the wrong!) data_directory in
    postgresql.auto.conf. (Closes: #931635)
  * PgCommon.pm: Ignore data_directory when set in postgresql.auto.conf.
  * pg_upgradecluster: Delete data_directory from postgresql.auto.conf in new
    cluster.
  * pg_upgradecluster: Use a tempfile instead of replacing the original
    pg_hba.conf file during upgrades.
  * debian/tests: Do full testsuite run. Previously the full testsuite was
    only running from the postgresql-NN server package.
  * t/135_pg_virtualenv.t: Don't fail if fakeroot is not present.

 -- Christoph Berg <myon@debian.org>  Wed, 03 Jul 2019 15:01:03 +0200

postgresql-common (202) unstable; urgency=medium

  * pg_ctlcluster: Close extra log filedescriptor. Thanks Andrey Borodin!
    (Closes: #930728)
  * pg_virtualenv: Disable fakeroot while creating clusters so we don't end up
    running as root.
  * t/135_pg_virtualenv.t: New test file.
  * t/TestLib.pm: Restrict check_clean to LISTENing sockets.
  * gitlab/gitlab-ci.yml: Run blhc; fail on lintian errors.

 -- Christoph Berg <myon@debian.org>  Tue, 02 Jul 2019 14:39:56 +0200

postgresql-common (201) experimental; urgency=medium

  [ Christoph Berg ]
  * Disable ssl on older server versions. (Versions up to 9.1 support
    OpenSSL 1.0 only, which has been removed from Debian unstable.)
  * pg_upgrade: Fix 'sameuser' handling in pg_hba when upgrading from pre-8.4
    versions.
  * gitlab/gitlab-ci.yml: Ignore skipped tests, and packages without tests; install
    pristine-tar; install via dh_make_pgxs.
  * Move .gitlab-ci.yml to debian/gitlab-ci.yml; add buster and stretch,
  * remove jessie. (Not to be confused with gitlab/gitlab-ci.yml.)
  * dh_make_pgxs: Set debhelper compat level to 9, highest version supported
    by jessie and trusty.

  [ Andreas Hasenack ]
  * Set Ubuntu 19.10 default PostgreSQL version to 11.

 -- Christoph Berg <myon@debian.org>  Thu, 09 May 2019 10:02:05 +0200
